# azureml-scaffolding

./: .env  .gitignore  .markdown-link.json  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.env  container.env  environment.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.experiment_template/: .amlignore  README.md  debug.example.py
.experiment_template/common/: logging
.experiment_template/environment/: environment.yaml
.experiment_template/src/: azure-ml-job.yaml  debug_template.py
.experiment_template/src/experiment_template/: main.py
.experiment_template/src/experiment_template/tests/: test_main.py
.experiment_template/tests/: test_main.py
.package-template/: README.md  aml-job.yaml  pyproject.toml
.package-template/src/: azure-ml-job.yaml
.package-template/src/package_template/: __main__.py  answer.py
.package-template/src/tests/: test_answer.py  test_main.py
.pipeline-template/: example-pipeline.yaml  pipeline-template.yaml
.pipeline-template/example-reader-step/: aml-component.yaml
.pipeline-template/example-writer-step/: aml-component.yaml
.pipeline-template/reader-step/: aml-component.yaml
.pipeline-template/writer-step/: __main__.py  aml-component.yaml
docs/makefile/: build-exp  dependency  format  help  job  jupyter  local  new-exp  terminal  test
experiments/example_experiment/: README.md  debug.example.py  pyproject.toml
experiments/example_experiment/src/: .amlignore  azure-ml-job.yaml  debug_template.py
experiments/example_experiment/src/example_experiment/: __init__.py  main.py
experiments/shared/: README.md  pyproject.toml
pipelines/: example-pipeline.yaml
pipelines/example_pipeline/: azure-ml-pipeline.yaml
src/common/: printer.py
src/common/logging/: azureml_logger.py
src/example_experiment/: .amlignore  azure-ml-job.yaml  local.py  main.py
src/example_experiment/common/: printer.py
src/example_experiment/docker/: Dockerfile
src/example_experiment/environment/: Dockerfile  environment.yaml
src/example_experiment/tests/: test_main.py
