[project]
name = "scaffolding"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest  ==8.3.*",
    "python-dotenv  ==1.0.*",
    "pyright  ==1.1.*",
    "ruff  ==0.6.*",
    "pre-commit  ==3.8.*"
]
azureml = [
    "mlflow-skinny  ==2.16.*",
    "azureml-mlflow  ==1.57.*",
    "pytz  ==2024.2"
]
example_experiment = [
]

[tool.uv]
default-groups = [
    "dev",
    "azureml",
    "example_experiment"
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py312"
show-fixes = true
lint.select = [
    "B0",     # bugbear
    "E",      # pycodestyle
    "F",      # Pyflakes
    "I",      # import order
    "UP",     # pyupgrade
    "RUF100", # valid noqa annnotations
]

[tool.pytest.ini_options]
testpaths = ["src"]
addopts = "--strict-markers --import-mode=importlib"
